--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,57 @@
-body{
-  text-align:center;
+*{
+	margin:0;
+	padding:0;
+	box-sizing :border-box;
+}
+
+.container{
+	width:1000px;
+	margin:100px auto;
+	text-align: center;
+}
+
+.tictactoe{
+	margin:50px auto;
+}
+
+.board, .options{
+	width:300px;
+	margin:20px auto;
+	overflow: auto;
+}
+
+.cell{
+	float:left;
+	width:100px;
+	height:100px;
+	line-height: 100px;
+}
+
+[class*="0"],[class*="1"],[class*="2"],[class*="3"],[class*="4"],[class*="5"] {
+	border-bottom:2px solid black;
+}
+[class*="0"],[class*="3"],[class*="6"],[class*="1"],[class*="4"],[class*="7"] {
+	border-right:2px solid black;
+}
+
+.cell:hover{
+	background-color: rgba(0, 0, 255, 0.02);
+}
+
+.playerText{
+	float:left;
+	padding: 0.4em 1em;
+  background: rgba(255,255,255,0);
+	font-size: 1.0em;
+	text-transform: uppercase;
+
+}
+.restart{
+	float:right;
+  padding: 0.4em 1em;
+  /*border: 1px solid #000;
+  background: rgba(255,255,255,0);*/
+  border-radius: 4px;
+	font-size: 1.0em;
+
 }
